# Centrale

./: README.md
C_learn/Leet_code_cpp/: 69.Sqrt(x).cpp  isPalindrome.cpp  lengthOfLastWord.cpp
C_learn/Leet_code_cpp/58.Length_of_Last_Word/: 58.Length_of_Last_Word.md  lengthOfLastWord.cpp
C_learn/Leet_code_cpp/9.Palindrome_Number/: 9.Palindrome_Number.md  isPalindrome.cpp
Cpp_learn/C/Study_C++/: README.txt  example-001-001-stack-scopes.cpp  example-001-002-stack-variables.cpp  example-002-002-variables-arrays.cpp  example-003-001-functions-byvalue.cpp  example-003-002-functions-contexts.cpp  example-004-002-pointers-dereference.cpp  example-004-003-pointers-affectation.cpp  example-006-002-struct-constructors.cpp  example-006-003-struct-initattributes.cpp  example-006-005-struct-this.cpp  example-006-009-struct-heapattributes.cpp  life_cycle_in_ram.cpp  test
Cpp_learn/C/Tp/Classe_inheritance/blocks/: blk.hpp  blkBeside.cpp  blkBeside.hpp  blkBlock.cpp  blkDebug.cpp  blkMoveRef.cpp  blkMoveRef.hpp  blkOperators.hpp  blkOver.cpp  blkOver.hpp  test  test-001-debug.cpp  test-002-001-beside.cpp  test-002-002-over.cpp  test-002-003-moveref.cpp  test-003-text.cpp  test-004-operators.cpp
Cpp_learn/C/Tp/Classe_inheritance/blocks-solution/: blkBeside.cpp  blkBlock.cpp  blkBlock.hpp  blkDebug.cpp  blkDebug.hpp  blkMoveRef.cpp  blkMoveRef.hpp  blkOperators.cpp  blkOver.cpp  blkOver.hpp  blkText.cpp  blkText.hpp  test-004-operators.cpp
Cpp_learn/C/Tp/Lambda_function/logic-solution/: adder.hpp  gate.hpp  test-adder.cpp
Cpp_learn/C/Training_cpp/: Introduction.cpp  List_node.cpp  jeux_1.cpp  leet_code.cpp  pointers.cpp  smart_pointers.cpp  structure.cpp  test  test.py
Cpp_learn/C/preprocess-001/: definitions.cpp  functions.cpp  main-preprocessed.cpp  main.cpp  my_software
Cpp_learn/C/preprocess-002/: geom.hpp  geomPoint.cpp  geomPoint.hpp  geomSegment.cpp  geomSegment.hpp  geomTriangle.cpp  geomTriangle.hpp  main.cpp  medianator.cpp  medianator.hpp
Cpp_learn/C/quantize/: CMakeLists.txt  README.md
Cpp_learn/C/quantize/doc/: CMakeLists.txt  Doxyfile.in
Cpp_learn/C/quantize/examples/: CMakeLists.txt  cv-example-003.cpp  example-001.cpp  example-002.cpp
Cpp_learn/C/quantize/share/: CMakeLists.txt
Cpp_learn/C/quantize/share/ui/: windows.glade
Cpp_learn/C/quantize/src/: CMakeLists.txt  gui-application-window.cpp  gui-application-window.hpp  gui-main.cpp  quantize-cv.cpp  quantize-cv.hpp  quantize-exceptions.hpp  quantize-kmeans.hpp  quantize-sampler.hpp  quantize-vector.hpp  quantize.hpp
Cpp_learn/C/quantize/tests/: CMakeLists.txt  test_sampler.cpp  test_vector.cpp
Cpp_learn/C/self-study-c++/: example-001-003-stack-initializations.cpp  example-002-001-variables-manipulations.cpp  example-002-002-movefun.cpp  example-002-003-moveop.cpp  example-003-003-functions-byreference.cpp  example-004-001-new.cpp  example-004-001-pointers-addresses.cpp  example-004-004-pointers-iterators.cpp  example-004-005-pointers-functions.cpp  example-005-001-heap-new.cpp  example-005-002-heap-delete.cpp  example-006-001-struct-compounds.cpp  example-006-004-struct-addfunctionalities.cpp  example-006-006-struct-operators.cpp  example-006-007-struct-forreal.cpp  example-006-008-struct-interface.cpp  num.cpp
Cpp_learn/Leet_code_cpp/: num.hpp
Cpp_learn/Leet_code_cpp/118.Pascals_Triangle.cpp/: README.md
Cpp_learn/Leet_code_cpp/1217.Minimum_Cost_to_Move_Chips_to_The_Same_Position/: README.md
Cpp_learn/Leet_code_cpp/1281.Subtract_the_Product_and_Sum_of_Digits_of_an_Integer/: README.md
Cpp_learn/Leet_code_cpp/136.Single_number.cpp/: README.md
Cpp_learn/Leet_code_cpp/1512.Number_of_Good_Pairs/: README.md
Cpp_learn/Leet_code_cpp/1884.Egg_Drop_With_2_Eggs_and_N_Floors/: README.md
Cpp_learn/Leet_code_cpp/191.Number_of_1_Bits/: README.md
Cpp_learn/Leet_code_cpp/200.Number_of_Islands/: README.md
Cpp_learn/Leet_code_cpp/231.Power_of_two.cpp/: README.md
Cpp_learn/Leet_code_cpp/263.Ugly_Number/: README.md
Cpp_learn/Leet_code_cpp/268.Missing_Number.cpp/: README.md
Cpp_learn/Leet_code_cpp/28.Implement_strStr.cpp/: README.md
Cpp_learn/Leet_code_cpp/389.Find_the_Difference.cpp/: README.md
Cpp_learn/Leet_code_cpp/429.N-ary_Tree_Level_Order_Traversal/: README.md
Cpp_learn/Leet_code_cpp/69.Sqrtx.cpp/: 69.Sqrtx.md
Cpp_learn/Leet_code_cpp/70.Climbing_Stairs/: README.md
Cpp_learn/Leet_code_cpp/804.Unique_Morse_Code_Words/: README.md
Cpp_learn/Leet_code_cpp/92.Reverse_Linked_List_II/: README.md
GlyphoGANs/: README.md
GlyphoGANs/Images/: Documents exportǸs.bib
GlyphoGANs/Images/Report_picture/: Latent_space_inter.avi
ML/Dimensionality_reduction/: featsel-sol.py  featsel_template.py  fiche.ipynb  stanford_sentiment.py  test_iris.py  utils.py
ML/Ensemble_method_bagging/: draw.py  functional.py  ml.ipynb  ml.py  randomvar.ipynb  randomvar.py  warm-up.py
ML/Ensemble_method_bagging/Corrige-TP-Ensembles/: README.txt  main.py  ml.py  randomvar.py
ML/Featues_selections/: Feature_selection_ANOVA.ipynb  Feature_selection_correlation.ipynb  Feature_selection_embedded.ipynb  Feature_selection_wrapper.ipynb  boostrappingg_circles.py  classif_tree.gv
ML/TP1-ML-NB/: README.txt  SMS_spams.ipynb  SMS_spams_solution.ipynb  requirements.txt
ML/TP1-ML-NB/.ipynb_checkpoints/: SMS_spams-checkpoint.ipynb  SMS_spams_solution-checkpoint.ipynb
Twitter__application/: .gitignore  .gitlab-ci.yml  README.md  Tweetoscope_deployment.yml  docker-compose.yml  zookeeper-kafka.yml
Twitter__application/Dockerfiles/: Dockerfile.EmptyFilter  Dockerfile.Filter_Lang  Dockerfile.HashtagExtractor  Dockerfile.Producer_Sampled  Dockerfile.Producer_database  Dockerfile.hashtagcounter
Twitter__application/Dockerfiles_localhost/: Dockerfile.EmptyFilter  Dockerfile.Filter_Lang  Dockerfile.HashtagExtractor  Dockerfile.Producer_Sampled  Dockerfile.Producer_database  Dockerfile.Visualizator  Dockerfile.hashtagcounter
Twitter__application/TestBases/: miniTestBase.txt  scenarioTestBase.txt
Twitter__application/documentation/: report.tex
Twitter__application/tweetoscope/: pom.xml
(+60 files in other folders)
